Add Update Season Endpoint and Logic
